--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold mx-1">
             <li class="nav-item mx-1">
-                <img href="https://www.tbceducation.ge/" src="/static/logo/logo.png" alt="Image Description" style="width: 40px; height: 40px;">
+                <a href="https://www.tbceducation.ge/" target="_blank">
+                    <img src="/static/logo/logo.png" alt="Image Description" style="width: 40px; height: 40px;">
+                </a>
             </li>
             <li class="nav-item mx-1">
                 <a class="nav-link {% if request.endpoint == 'home' %} active {% endif %}" href="{{ url_for('home') }}">Blogs</a>
